UI improvements: disable and enable buttons sequence according to predefined order, and sound effect included when reaching threshold defined by a medical protocol, for example 10s for strength test. Finally, the system is nos longer forcing user to include patient photo respective accounts.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -9,8 +9,8 @@
     <string name="activation_code_updated">Código actualizado satisfactoriamente.</string>
     <string name="add_participant">Registrar participante</string>
     <string name="add_patient">Registrar peciente</string>
-    <string name="app_long_name">Application for Monitoring Physical Performance Testing: Run, Strength, and Balance.</string>
-    <string name="app_version">Version 1.0</string>
+    <string name="app_long_name">Monitoreo de Pruebas de Desempeño Físico: Marcha, Fuerza y Balance</string>
+    <string name="app_version">Versión 1.0</string>
     <string name="authentication">Autenticación</string>
     <string name="authentication_message">Usuario no encontrado.</string>
     <string name="authentication_password_no">Por favor, capture la contraseña nuevamente. </string>
@@ -27,16 +27,16 @@
     <string name="strength_question_two">El paciento no pudo realizar la prueba</string>
     <string name="strength_question_three">El paciente usó los brazos para incorporarse</string>
     <string name="balance_question_one">El AM concluyó sin problemas las pruebas</string>
-    <string name="balance_question_two">El AM movió los piés</string>
-    <string name="balance_question_three">El AM necesitá ayuda para mantener el equilibrió</string>
+    <string name="balance_question_two">El AM movió los pies</string>
+    <string name="balance_question_three">El AM necesita ayuda para mantener el equilibrio</string>
     <string name="balance_step_hold_elderly">Sostenga los brazos del AM y ayúdelo a asumir la posición correcta de los pies.</string>
     <string name="balance_step_if_cannot_hold">IMPORTANTE: Si el paciente puede sostener la posición por 10 segundos sin mover los pies o que necesite ayuda, vaya a la siguiente posición. Si no es así, detenga la prueba.</string>
     <string name="balance_step_release_elderly">Cuando el AM se encuentre estable, suéltelo, pero permanezca cerca para volverlo a sostener en caso de que pierda el equilibrio.</string>
-    <string name="balance_step_stay_feet_together">Describa y demuestre la posición de pies juntos.</string>
+    <string name="balance_step_stay_feet_together">Describa y demuestre la posición de pies juntos. Indique al AM que se pare con los pies lado a lado.</string>
     <string name="balance_step_stay_next_elderly">ATENCIÓN: Manténgase siempre cerca del Adulto Mayor (AM) para prevenir caídas.</string>
-    <string name="balance_step_stay_one_leg">Describa y demuestre la posición en un pie.</string>
-    <string name="balance_step_stay_semi_tandem">Describa y demuestre la posición de pies en semi-tandem.</string>
-    <string name="balance_step_stay_tandem">Describa y demuestre la posición de tandem.</string>
+    <string name="balance_step_stay_one_leg">Describa y demuestre la posición unipodal. Indique al AM que se pare en un pie.</string>
+    <string name="balance_step_stay_semi_tandem">Describa y demuestre la posición de pies en semi-tandem. Indique al AM que coloque el empeine de un pie a la altura del dedo gordo del otro pie.</string>
+    <string name="balance_step_stay_tandem">Describa y demuestre la posición de tandem. Indique al paciente que coloque un pie delante del otro, el talón tocando la punta del pie.</string>
     <string name="balance_step_to_start">Presione INICIAR, la aplicación hace un conteo regresivo: 3, 2, 1, acompañado de un sonido de inicio. Diga \"Ahora\" cuando el conteo llegue a cero para comenzar con la prueba. Después de 10 segundos, la aplicación emite un sonido de alto.</string>
     <string name="button_balance_test">Prueba de balance</string>
     <string name="button_cancel">Cancelar</string>
@@ -126,7 +126,7 @@
     <string name="label_update">Actualización:</string>
     <string name="label_user">Usuario</string>
     <string name="label_waits_size">Cintura:</string>
-    <string name="label_walking_test">TG:</string>
+    <string name="label_walking_test">TUG:</string>
     <string name="label_weight">Peso:</string>
     <string name="labl_relevant_observations">Observaciones relevantes:</string>
     <string name="left_menu_help">Ayuda</string>
@@ -166,7 +166,7 @@
     <string name="select_picture">Seleccionar photo</string>
     <string name="spinner_select_option">[ Seleccione una opción ]</string>
     <string name="strength_test_30_seconds">Indique al AM que debe repetir esto durante 30 segundos tan rápido como pueda.</string>
-    <string name="strength_test_important">IMPORTANTE: Si el paciente usa los brazos para incorporarse, se detiene el estudio y se anota cero en su puntuación.</string>
+    <string name="strength_test_important">IMPORTANTE: Si el paciente usa los brazos para incorporarse, se detiene el estudio y se anota cero en el número de repeticiones y en la puntuación.</string>
     <string name="strength_test_indications">Indique al AM que al escuchar \"Ahora\" se incorpore a una posición de parado completo y que luego vuelva a sentarse.</string>
     <string name="strength_test_preparation">Indique al AM que se siente en medio de una silla sin descansabrazos, que coloque las manos sobre el hombro opuesto cruzando por las muñecas y que mantenga los brazos contra su pecho, los pies apoyados en el suelo y la espalda recta.</string>
     <string name="strength_test_start">Presione INICIAR, empezará un conteo regresivo, diga \"Ahora\" cuando el conteo llegue a cero para comenzar con la prueba.</string>
