--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,20 +56,20 @@
     <string name="button_continue">Continue</string>
     <string name="header_faqs">FAQs</string>
     <string name="walking_question_one">No abnormal gait</string>
-    <string name="walking_question_two">Slow pace</string>
+    <string name="walking_question_two">Slow tentative pace</string>
     <string name="walking_question_three">Loss of balance</string>
-    <string name="walking_question_four">Tour at a single point</string>
+    <string name="walking_question_four">En bloc turning</string>
     <string name="walking_question_five">Little or no arm swing</string>
-    <string name="walking_question_six">Stabilization walls</string>
-    <string name="walking_question_seven">Drag your feet when walking</string>
-    <string name="walking_question_eight">Short steps</string>
-    <string name="walking_question_nine">Do not use the device correctly assistance</string>
-    <string name="strength_question_one">The Elderly concluded smoothly tests</string>
-    <string name="strength_question_two">The Elderly shuffled his feet</string>
-    <string name="strength_question_three">The Elderly need help to maintain balance</string>
-    <string name="balance_question_one">The Elderly test ended without problems</string>
-    <string name="balance_question_two">The Elderly could not perform the test</string>
-    <string name="balance_question_three">The Elderly used the arms to join</string>
+    <string name="walking_question_six">Steadying self on walls</string>
+    <string name="walking_question_seven">Shuffling</string>
+    <string name="walking_question_eight">Short strides</string>
+    <string name="walking_question_nine">Not using assistive device properly</string>
+    <string name="strength_question_one">The OA finished the test without problems.</string>
+    <string name="strength_question_two">The OA couldn\'t perform the test.</string>
+    <string name="strength_question_three">The OA used his/her arms to stand.</string>
+    <string name="balance_question_one">The OA finished the test without problems</string>
+    <string name="balance_question_two">The OA could not perform the test</string>
+    <string name="balance_question_three">The OA needed support</string>
     <string name="header_walkability_evaluation">Walkability test evaluation</string>
     <string name="button_repeat">Repeat test</string>
     <string name="header_balance_evaluation">Balance test evaluation</string>
@@ -88,8 +88,8 @@
     <string name="login">Log In</string>
     <string name="header_login">3Ollin Test</string>
     <string name="app_version">Version 1.0</string>
-    <string name="app_long_name">Application for Monitoring Physical Performance Testing: Run, Strength, and Balance.</string>
-    <string name="privacy_terms_tab">Terminos de privacidad</string>
+    <string name="app_long_name">Application for Monitoring Physical Performance Tests: Gait, Strength, and Balance.</string>
+    <string name="privacy_terms_tab">Privacy terms</string>
     <string name="activation_code_description">The activation code lets you have the full services of 3Ollin Test, for instance the provision of information collected via online.
         \n\n
         The activation code distribution is limited to physicians and specialists who cooperate with the National Institute of Geriatrics of Mexico City.</string>
@@ -111,7 +111,7 @@
     <string name="patient_heart_rate_hint">Heart rate (bpm)</string>
     <string name="patient_sys_blood_hint">Systolic blood pressure (mm Hg)</string>
     <string name="patient_dia_blood_hint">Diastolic blood pressure (mm Hg)</string>
-    <string name="label_counting">3 2 1</string>
+    <string name="label_counting">3-2-1</string>
     <string name="user_passwords">Password</string>
     <string name="user_password_confirmation">Repeat Password</string>
     <string name="user_birthday_hint">Date of birth</string>
@@ -161,31 +161,31 @@ E. INTEGRIDAD. Las presentes Políticas de Privacidad son parte integrante de lo
     <string name="button_strength_test">Strength test</string>
     <string name="button_balance_test">Balance test</string>
     <string name="button_restore">[ Restore password ]</string>
-    <string name="balance_step_stay_next_elderly">WARNING: Always stay near the Elderly (AM) to prevent falls.</string>
-    <string name="balance_step_stay_one_leg">Describe and demonstrate the position on one foot.</string>
-    <string name="balance_step_stay_semi_tandem">Describe and display the position of feet in semitandem.</string>
-    <string name="balance_step_stay_tandem">Describe and show the position tandem.</string>
-    <string name="balance_step_stay_feet_together">Describe and show the position of your feet together.</string>
-    <string name="balance_step_hold_elderly">Hold Elderly\'s arms and help him to assume the correct position of the feet.</string>
-    <string name="balance_step_release_elderly">When the Elderly is stable, release him, but stay close to return hold in case you lose your balance.</string>
+    <string name="balance_step_stay_next_elderly">WARNING: Always stay near the Older Adult (OA) to prevent falls.</string>
+    <string name="balance_step_stay_one_leg">Describe and demonstrate the position. Tell the OA to stand on one foot.</string>
+    <string name="balance_step_stay_semi_tandem">Describe and demonstrate the position of feet in semitandem. Tell the OA to place the instep of one foot so it is touching the big toe of the other foot.</string>
+    <string name="balance_step_stay_tandem">Describe and demonstrate the tandem position. Tell the OA to place one foot in front of the other, heel touching toe.</string>
+    <string name="balance_step_stay_feet_together">Describe and demonstrate the position. Tell the OA to stand with his/her feet side by side.</string>
+    <string name="balance_step_hold_elderly">Hold his/her arms and help him/her assume the correct foot position.</string>
+    <string name="balance_step_release_elderly">When the OA is steady, let go, but remain close to hold him/her in case he/she loses their balance.</string>
     <string name="balance_step_to_start">Press START, the application makes a countdown: 3, 2, 1, accompanied by a sound start. Say \"Now\" when the count reaches zero to begin the test. After 10 seconds, the application chirps high.</string>
-    <string name="balance_step_if_cannot_hold">IMPORTANT: If the patient can hold the position for 10 seconds without moving your feet or you need help, go to the next position. If not, stop the test.</string>
-    <string name="strength_test_warning">WARNING: Always stay near the Elderly (AM) to prevent falls.</string>
-    <string name="strength_test_preparation">Tell the AM to sit in the middle of a chair without armrests, place your hands on the opposite shoulder across her wrists and hold your arms against his chest, feet flat on the floor and back straight.</string>
+    <string name="balance_step_if_cannot_hold">IMPORTANT: If the patient can hold the position for 10 seconds without moving his/her feet or needing support, go on to the next position. If not, stop the test.</string>
+    <string name="strength_test_warning">WARNING: Always stay near the Older Adult (OA) to prevent falls.</string>
+    <string name="strength_test_preparation">Tell the OA to sit in the middle of a chair without armrests, to place his/her hands on the opposite shoulder crossed at the wrists and to keep his/her arms against his/her chest, his/her feet flat on the floor and his/her back straight.</string>
     <string name="strength_test_start">Press START begins a countdown, say \"Now\" when the count reaches zero to begin the test.</string>
-    <string name="tug_test_warning">WARNING: Always stay near the Elderly (AM) to prevent falls.</string>
-    <string name="tug_test_preparation">The AM should use your regular shoes and can have help walking if necessary. Start laying the AM in a chair without armrests and identify a line on the ground to 3 meters.</string>
+    <string name="tug_test_warning">WARNING: Always stay near the Older Adult (OA) to prevent falls.</string>
+    <string name="tug_test_preparation">The OA should use their regular footwear and can use a walking aid if needed. Begin by having the OA sit back in a chair without armrests and identify a line 3 meters away on the floor.</string>
     <string name="tug_test_start">Press START begins a countdown, say \"Now\" when the count reaches zero to begin the test.</string>
-    <string name="tug_test_get_up">Tell the Elderly to get out of the chair.</string>
-    <string name="tug_test_walk">Tell the Elderly to walk to the line marked on the floor to its normal rhythm.</string>
-    <string name="tug_test_turn_around">Tell the Elderly to turn around.</string>
-    <string name="tug_test_return">Tell the Elderly to return to the chair to its normal rhythm.</string>
-    <string name="tug_test_sit">Tell the Elderly to sit again.</string>
-    <string name="tug_test_stop">Stop the app after the Elderly has returned to sit down.</string>
-    <string name="strength_test_indications">Instruct to the Elderly that when he hears \"Now\", he should joins a full standing position and then sit back down.</string>
-    <string name="strength_test_30_seconds">Tell the AM you should repeat this for 30 seconds as fast as possible.</string>
+    <string name="tug_test_get_up">Tell the OA to stand up from the chair.</string>
+    <string name="tug_test_walk">Tell the OA to walk to the line marked on the floor at his normal pace.</string>
+    <string name="tug_test_turn_around">Tell the OA to turn around.</string>
+    <string name="tug_test_return">Tell the OA to walk back to the chair at his normal pace.</string>
+    <string name="tug_test_sit">Tell the OA to sit down again.</string>
+    <string name="tug_test_stop">Stop the app after the OA has returned to sit down.</string>
+    <string name="strength_test_indications">Instruct the OA that when he hears \"Now\", he should rise to a full standing position and then sit back down again.</string>
+    <string name="strength_test_30_seconds">Tell the OA that he/she should repeat this for 30 seconds as fast as possible.</string>
     <string name="strength_test_time_over">The application makes a sound to indicate that the time is over.</string>
-    <string name="strength_test_important">IMPORTANT: If the patient uses the arms to join the study stops and zero scores on your score.</string>
+    <string name="strength_test_important">IMPORTANT: If the patient must use his/her arms to stand, stop the test. Record zero for the number of repetitions and the score.</string>
     <string name="label_tug_test_name">TUG test</string>
     <string name="label_strength_test_name">Strength test</string>
     <string name="label_balance_test_name">Balance test</string>
@@ -208,7 +208,7 @@ E. INTEGRIDAD. Las presentes Políticas de Privacidad son parte integrante de lo
     <string name="left_menu_help">Help</string>
     <string name="left_menu_logout">Logout</string>
     <string name="left_menu_title">Menu</string>
-    <string name="button_continue_test">Continuar con la prueba</string>
+    <string name="button_continue_test">Continue with the test.</string>
     <string name="removed">Removed</string>
     <string name="authentication">Authentication</string>
     <string name="authentication_message">User no found.</string>
